tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/literal-multiline-quotes-2.stderr
TOML parse error at line 1, column 29
  |
1 | a = '''15 apostrophes: ''''''''''''''''''
  |                             ^
expected newline, `#`
